--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.7" />
 
     <Button
-        android:id="@+id/match_button"
+        android:id="@+id/open_intent_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="check"
