--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -2,47 +2,73 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="false">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/profile_icon"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp" />
-
-        <TextView
-            android:id="@+id/summoner_name"
-            android:layout_width="116dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="50dp"
-            android:layout_toEndOf="@+id/profile_icon"
-            android:layout_weight="1"
-            android:text="Name: " />
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp">
 
-        <TextView
-            android:id="@+id/level"
-            android:layout_width="116dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/summoner_name"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="50dp"
-            android:layout_toEndOf="@+id/profile_icon"
-            android:layout_weight="1"
-            android:text="Level: " />
+            <ImageView
+                android:id="@+id/profile_icon"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp" />
 
-    </RelativeLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/summoner_name"
+                    android:layout_width="116dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_toEndOf="@+id/profile_icon"
+                    android:layout_weight="1"
+                    android:text="Name: "
+                    android:textSize="24sp" />
 
-</ScrollView>
+                <TextView
+                    android:id="@+id/level"
+                    android:layout_width="116dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/summoner_name"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_toEndOf="@+id/profile_icon"
+                    android:layout_weight="1"
+                    android:text="Level: "
+                    android:textSize="24sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/content_view"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"/>
+
+    </LinearLayout>
+
+    <!--Place for most used deck-->
+
+    <!--Place for Most Used Champion with Item-->
+    <!--Place for comparison with other deck (Ideally, weakest against certain deck) -->
+
+    </ScrollView>
