--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -1,70 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="411sp"
+    android:layout_height="138sp">
 
     <ImageView
+        android:id="@+id/champion_image"
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_margin="5sp"
-        android:id="@+id/champion_image"/>
+        app:layout_constraintHorizontal_weight="0"
+        app:layout_constraintVertical_weight="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="24dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/champion_name"
-            android:text="Name: "/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="24dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/champion_tier"
-            android:text="Tier: "/>
+    <TextView
+        android:id="@+id/champion_name"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="16dp"
+        android:text="Name: "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/champion_image"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48sp"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
+    <TextView
+        android:id="@+id/champion_used"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="16dp"
+        android:text="Used: "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/champion_image"
+        app:layout_constraintTop_toBottomOf="@+id/champion_name" />
 
-            <TextView
-                android:layout_width="75sp"
-                android:layout_height="24sp"
-                android:layout_marginTop="12sp"
-                android:id="@+id/champion_items"
-                android:text="Name: "/>
+    <TextView
+        android:id="@+id/champion_items"
+        android:layout_width="75sp"
+        android:layout_height="24sp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="12dp"
+        android:text="Name: "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/list_item_3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/champion_image"
+        app:layout_constraintTop_toBottomOf="@+id/champion_used"
+        app:layout_constraintVertical_bias="0.0" />
 
-            <ImageView
-                android:layout_width="24sp"
-                android:layout_height="24sp"
-                android:layout_marginTop="12sp"
-                android:layout_marginLeft="25sp"
-                android:id="@+id/list_item_1"/>
+    <ImageView
+        android:id="@+id/list_item_1"
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintHorizontal_weight="0"
+        app:layout_constraintVertical_weight="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:layout_width="24sp"
-                android:layout_height="24sp"
-                android:layout_marginTop="12sp"
-                android:layout_marginLeft="25sp"
-                android:id="@+id/list_item_2"/>
+    <ImageView
+        android:id="@+id/list_item_2"
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintHorizontal_weight="0"
+        app:layout_constraintVertical_weight="0"
+        app:layout_constraintEnd_toStartOf="@+id/list_item_1"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:layout_width="24sp"
-                android:layout_height="24sp"
-                android:layout_marginTop="12sp"
-                android:layout_marginLeft="25sp"
-                android:id="@+id/list_item_3"/>
+    <ImageView
+        android:id="@+id/list_item_3"
+        android:layout_width="24sp"
+        android:layout_height="24sp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintHorizontal_weight="0"
+        app:layout_constraintVertical_weight="0"
+        app:layout_constraintEnd_toStartOf="@+id/list_item_2"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
-
-</LinearLayout>
